...
                                    <constraint firstAttribute="height" constant="52" id="sCw-bo-6A7"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ieh-BB-nyd">
                                <rect key="frame" x="20" y="316" width="374" height="52"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="52" id="VVE-zY-KhD"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <string key="text">Your password must be at least 8 Charaters longs
and should contain special characters and numbers</string>
                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                <color key="textColor" red="0.99656540159999996" green="0.96962112190000005" blue="0.92918765540000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SfN-sS-TOK">
                                <rect key="frame" x="20" y="443" width="374" height="52"/>
                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="52" id="N5u-ix-Amh"/>
                                    <constraint firstAttribute="height" constant="52" id="XxU-na-Cu4"/>
                                </constraints>
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0T1-E2-c0X">
                                <rect key="frame" x="340" y="812" width="54" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="zfO-tt-Vc0"/>
                                </constraints>
                                <state key="normal" title="SIGN IN"/>
                                <connections>
                                    <segue destination="Mvt-ws-kwq" kind="show" id="kzs-sI-8Bi"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
